<resources>

    <string name="_20_desember_2023">20 Desember 2023</string>
    <string name="tanggal">Tanggal</string>
    <string name="nasabah">Nasabah</string>
    <string name="nama_nasabah">Nama Nasabah</string>
    <string name="petugas">Petugas</string>
    <string name="nama_petugas">Nama Petugas</string>
    <string name="bank_sampah">Bank Sampah</string>
    <string name="nama_bank_sampah">Nama Bank Sampah</string>
    <string name="img">img</string>
    <string name="kalkulator">KALKULATOR</string>
    <string name="down">down</string>
    <string name="sub_kategori">Sub-Kategori</string>
    <string name="total_jumlah">Total Jumlah</string>
    <string name="min">-</string>
    <string name="number">0</string>
    <string name="plus">+</string>
    <string name="user_123">User 123</string>
    <string name="user">user</string>
    <string name="user123_gmail_com">User123@gmail.com</string>
    <string name="log_out">Log out</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="Down">down</string>
    <string name="masukkan_data_sampah">Masukkan Data Sampah</string>
    <string name="kategori">Kategori</string>
    <string name="Kategori">Kategori</string>
    <string name="Sub_kategori">Sub Kategori</string>
</resources>