<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/nav_bg"
            android:orientation="horizontal">

            <Button
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/menu_logo" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/kalkulator"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/img"
                android:src="@drawable/img_1" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/akun_saya"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/user"
            android:src="@drawable/user_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/user_123"
            android:textColor="#000000"
            android:textSize="38sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_text"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/user_icon"

            <TextView
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:gravity="center_vertical"
                android:text="@string/user123_gmail_com"
                android:textSize="20sp" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:padding="12dp"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logout"

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:gravity="bottom"
                android:text="@string/log_out"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    </RelativeLayout>